# parity-bitcoin

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  SECURITY.md  aliases.js  index.html  search-index.js
bencher/: Cargo.toml
bencher/src/: database.rs  main.rs  verifier.rs
chain/: BlockHeader.t.html  Cargo.toml  HashedData.t.html  IndexedBlock.t.html  IndexedBlockHeader.t.html  OutPoint.t.html  README.md  ReadAndHash.t.html  RepresentH256.t.html  ShortTransactionID.t.html  TransactionInput.t.html  TransactionOutput.t.html  all.html  fn.merkle_node_hash.html  fn.merkle_root.html  index.html  merkle_root.v.html  sidebar-items.js  struct.Block.html  struct.BlockHeader.html  struct.HashedData.html  struct.IndexedBlock.html  struct.IndexedBlockHeader.html  struct.IndexedTransaction.html  struct.OutPoint.html  struct.Transaction.html  struct.TransactionInput.html  struct.TransactionOutput.html  trait.ReadAndHash.html  trait.RepresentH256.html  type.ShortTransactionID.html
chain/benches/: mod.rs
chain/bigint/: index.html  sidebar-items.js
chain/block/: struct.Block.html
chain/block_header/: struct.BlockHeader.html
chain/bytes/: index.html  struct.Bytes.html  struct.TaggedBytes.html
chain/compact/: index.html  sidebar-items.js  struct.Compact.html
chain/constants/: LOCKTIME_THRESHOLD.v.html  SATOSHIS_IN_COIN.v.html  SEQUENCE_FINAL.v.html  SEQUENCE_LOCKTIME_DISABLE_FLAG.v.html  SEQUENCE_LOCKTIME_MASK.v.html  SEQUENCE_LOCKTIME_TYPE_FLAG.v.html  constant.LOCKTIME_THRESHOLD.html  constant.SATOSHIS_IN_COIN.html  constant.SEQUENCE_FINAL.html  constant.SEQUENCE_LOCKTIME_DISABLE_FLAG.html  constant.SEQUENCE_LOCKTIME_MASK.html  constant.SEQUENCE_LOCKTIME_TYPE_FLAG.html  index.html  sidebar-items.js
chain/hash/: H256.t.html  H96.t.html  index.html  struct.H160.html  struct.H256.html  struct.H264.html  struct.H32.html  struct.H48.html  struct.H512.html  struct.H520.html  struct.H96.html
chain/indexed_block/: struct.IndexedBlock.html
chain/src/: block.rs  constants.rs  (+10 more)
db/: Cargo.toml  ForkChainDatabase.t.html  all.html  index.html  sidebar-items.js  struct.BlockChainDatabase.html  struct.ForkChainDatabase.html
keys/: AddressHash.t.html  Cargo.toml  CompactSignature.t.html  DisplayLayout.t.html  Message.t.html  SECP256K1.t.html  Secret.t.html  all.html  enum.Error.html  enum.Network.html  enum.Public.html  enum.Type.html  index.html  sidebar-items.js  struct.Address.html  struct.CompactSignature.html  struct.KeyPair.html  struct.Private.html  struct.SECP256K1.html  struct.Signature.html  trait.DisplayLayout.html  type.AddressHash.html  type.Message.html  type.Secret.html
message/: .Cargo.toml.swo  Cargo.toml  MessageResult.t.html  all.html  deserialize_payload.v.html  enum.Error.html  fn.deserialize_payload.html  fn.serialize_payload.html  fn.to_raw_message.html  index.html  sidebar-items.js  struct.Command.html  struct.Message.html  struct.MessageHeader.html  struct.Services.html  trait.Payload.html  type.MessageResult.html
miner/: Cargo.toml  HashedOutPoint.t.html  MemoryPoolInformation.t.html  MemoryPoolOrderingStrategy.t.html  all.html  enum.DoubleSpendCheckResult.html  enum.MemoryPoolOrderingStrategy.html  find_solution.v.html  fn.find_solution.html  fn.transaction_fee.html  fn.transaction_fee_rate.html  index.html  sidebar-items.js  struct.BlockAssembler.html  struct.BlockTemplate.html  struct.HashedOutPoint.html  struct.MemoryPool.html  struct.MemoryPoolInformation.html  struct.NonFinalDoubleSpendSet.html  transaction_fee.v.html
newdb/: Cargo.toml
p2p/: Cargo.toml  InboundSyncConnection.t.html  LocalSyncNode.t.html  LocalSyncNodeRef.t.html  NetConfig.t.html  NodeTableError.t.html  OutboundSyncConnectionRef.t.html  P2P.t.html  PeerInfo.t.html  all.html  enum.Direction.html  enum.InternetProtocol.html  enum.NodeTableError.html  fn.event_loop.html  fn.forever.html  index.html  sidebar-items.js  struct.Config.html  struct.Context.html  struct.NetConfig.html  struct.P2P.html  struct.PeerInfo.html  trait.InboundSyncConnection.html  trait.LocalSyncNode.html  trait.OutboundSyncConnection.html  type.InboundSyncConnectionRef.html  type.LocalSyncNodeRef.html  type.OutboundSyncConnectionRef.html  type.PeerId.html
rpc/: Cargo.toml  Compatibility.t.html  MetaIoHandler.t.html  all.html  build.rs  enum.Compatibility.html  index.html  sidebar-items.js  struct.Error.html  struct.MetaIoHandler.html  struct.Remote.html  struct.Server.html
storage/: Cargo.toml
sync/: Cargo.toml  LocalNodeRef.t.html  SyncListener.t.html  VerificationParameters.t.html  all.html  create_local_sync_node.v.html  create_sync_blocks_writer.v.html  create_sync_connection_factory.v.html  create_sync_peers.v.html  enum.Error.html  fn.create_local_sync_node.html  fn.create_sync_blocks_writer.html  fn.create_sync_connection_factory.html  fn.create_sync_peers.html  index.html  sidebar-items.js  struct.VerificationParameters.html  trait.SyncListener.html  type.LocalNodeRef.html  type.PeersRef.html
verification/: BlockAcceptor.t.html  BlockVerifier.t.html  CanonBlock.t.html  Cargo.toml  ChainAcceptor.t.html  HeaderVerifier.t.html  VerificationLevel.t.html  Verify.t.html  all.html  enum.Error.html  enum.TransactionError.html  enum.VerificationLevel.html  fn.block_reward_satoshi.html  fn.is_valid_proof_of_work.html  fn.is_valid_proof_of_work_hash.html  fn.median_timestamp.html  fn.median_timestamp_inclusive.html  fn.transaction_sigops.html  fn.work_required.html  index.html  is_valid_proof_of_work_hash.v.html  median_timestamp.v.html  median_timestamp_inclusive.v.html  sidebar-items.js  struct.BackwardsCompatibleChainVerifier.html  struct.BlockAcceptor.html  struct.BlockVerifier.html  struct.CanonBlock.html  struct.CanonHeader.html  struct.CanonTransaction.html  struct.ChainAcceptor.html  struct.ChainVerifier.html  struct.Deployments.html  struct.HeaderAcceptor.html  struct.HeaderVerifier.html  struct.MemoryPoolTransactionAcceptor.html  struct.MemoryPoolTransactionVerifier.html  struct.TransactionAcceptor.html  struct.TransactionVerifier.html  trait.Verify.html  (+2 more)
(+1725 files in other folders)
