[package]
name = "bencher"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Ethcore <admin@ethcore.io>"]
description = "Parity bitcoin client."

[dependencies]
db = { path = "../db" }
verification = { path = "../verification" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
ethcore-devtools = { path = "../devtools" }
test-data = { path = "../test-data" }
time = "*"

[[bin]]
path = "src/main.rs"
name = "bencher"
