[package]
name = "chain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rustc-hex = "2"
heapsize = "0.4"
rayon = "1.0"
ethereum-types = "0.9"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }

[features]
default = []
test-helpers = []
