[package]
name = "db"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
elastic-array = "0.5"
rocksdb = { git = "https://github.com/ethcore/rust-rocksdb" }
ethcore-devtools = { path = "../devtools" }
primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
byteorder = "0.5"
chain = { path = "../chain"  }
serialization = { path = "../serialization" }
parking_lot = "0.3"
test-data = { path = "../test-data" }
bit-vec = "0.4"
log = "0.3"
lru-cache = "0.1.0"

[features]
dev = []
