[package]
name = "message"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
byteorder = "0.5"

bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }

[dependencies.clippy]
optional = true
version = "0.0.97"

[features]
default = []
dev = ["clippy", "primitives/dev", "serialization/dev"]
