[package]
name = "message"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
byteorder = "1.0"

bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }
network = { path = "../network" }
