[package]
name = "miner"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
byteorder = "1.0"
heapsize = "0.4"
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
storage = { path = "../storage" }
db = { path = "../db" }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
keys = { path = "../keys" }
script = { path = "../script" }

[dev-dependencies]
test-data = { path = "../test-data" }

[features]
test-helpers = []