[package]
name = "newdb"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rocksdb = { git = "https://github.com/ethcore/rust-rocksdb" }
byteorder = "1.0"
elastic-array = "0.6"
parking_lot = "0.4"
log = "0.3"

[dev-dependencies]
ethcore-devtools = { path = "../devtools" }
