[package]
name = "p2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
tokio-core = "0.1.1"
parking_lot = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
time = "0.1"
rand = "0.3"
log = "0.3"
abstract-ns = "0.2.1"
ns-dns-tokio = "0.1"
csv = "0.14.7"

primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
serialization = { path = "../serialization" }
network = { path = "../network" }
