[package]
name = "p2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
tokio-core = "0.1.6"
tokio-io = "0.1.1"
parking_lot = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
time = "0.1"
rand = "0.4"
log = "0.4"
abstract-ns = "0.3"
ns-dns-tokio = "0.3"
csv = "1"

primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
serialization = { path = "../serialization" }
network = { path = "../network" }
