[package]
name = "rpc"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[lib]

[dependencies]
log = "0.3"
serde = "0.9"
serde_json = "0.9"
rustc-serialize = "0.3"
tokio-core = "0.1.1"
serde_derive = "0.9"
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-macros = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }

ethcore-devtools = { path = "../devtools" }
sync = { path = "../sync" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
primitives = { path = "../primitives" }
p2p = { path = "../p2p" }
network = { path = "../network" }
db = { path = "../db" }
test-data = { path = "../test-data" }
miner = { path = "../miner" }
verification = { path = "../verification" }
script = { path = "../script" }
keys = { path = "../keys" }
