[package]
name = "storage"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
elastic-array = "0.6"
parking_lot = "0.4"
bit-vec = "0.4"
lru-cache = "0.1"
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
chain = { path = "../chain" }
display_derive = "0.0.0"
network = { path = "../network" }
