[package]
name = "sync"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
parking_lot = "0.3"
log = "0.3"
time = "0.1"

chain = { path = "../chain" }
db = { path = "../db" }
message = { path = "../message" }
p2p = { path = "../p2p" }
primitives = { path = "../primitives" }
test-data = { path = "../test-data" }
verification = { path = "../verification" }
