[package]
name = "sync"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]

[dependencies]
parking_lot = "0.3"
log = "0.3"
time = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = { git = "https://github.com/debris/tokio-core" }
linked-hash-map = "0.3"
ethcore-devtools = { path = "../devtools" }
bit-vec = "0.4.3"
murmur3 = "0.3"
rand = "0.3"
byteorder = "0.5"

chain = { path = "../chain" }
bitcrypto = { path = "../crypto" }
db = { path = "../db" }
message = { path = "../message" }
miner = { path = "../miner" }
p2p = { path = "../p2p" }
primitives = { path = "../primitives" }
script = { path = "../script" }
serialization = { path = "../serialization" }
test-data = { path = "../test-data" }
verification = { path = "../verification" }
network = { path = "../network" }

[features]
dev = []
