[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"
log = "0.3"
rayon = "0.6"
primitives = { path = "../primitives" }
chain = { path = "../chain"  }
serialization = { path = "../serialization" }
script = { path = "../script" }
network = { path = "../network" }
db = { path = "../db" }

[dev-dependencies]
test-data = { path = "../test-data" }
