[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = "0.1"
lazy_static = "0.2"
log = "0.4"
rayon = "0.8"
parking_lot = "0.4"
primitives = { path = "../primitives" }
chain = { path = "../chain"  }
serialization = { path = "../serialization" }
script = { path = "../script" }
network = { path = "../network" }
db = { path = "../db" }
bitcrypto = { path = "../crypto" }

[dev-dependencies]
test-data = { path = "../test-data" }
